package LEBOCQTitouan.edu.view.ui.canvas;

import java.awt.*;

public interface DisplayableComponent {
    void display(Graphics g);
}
